[DDW-269] Adjustments and missing translation

--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -278,176 +278,157 @@
   {
     "descriptors": [
       {
-        "defaultMessage": "!!!Software update is available",
-        "description": "Title for \"Manual update\" overlay",
-        "end": {
-          "column": 3,
-          "line": 15
-        },
-        "file": "source/renderer/app/components/appUpdate/AppManualUpdateOverlay.js",
-        "id": "appUpdate.manualUpdateOverlay.title",
-        "start": {
-          "column": 9,
-          "line": 11
-        }
-      },
-      {
-        "defaultMessage": "!!!You are experiencing network connection issues, and you are not running the latest Daedalus version. Automatic updates are unavailable while Daedalus is not connected to Cardano network.",
-        "description": "Description line 1 of \"Manual update\" overlay",
-        "end": {
-          "column": 3,
-          "line": 21
-        },
-        "file": "source/renderer/app/components/appUpdate/AppManualUpdateOverlay.js",
-        "id": "appUpdate.manualUpdateOverlay.description1",
-        "start": {
-          "column": 20,
-          "line": 16
-        }
-      },
-      {
-        "defaultMessage": "!!!You are currently running <b>{currentAppVersion}</b> version of Daedalus, and <b>{availableAppVersion}</b> version is available. Please manually update to that version since it may resolve your connecting issues.",
-        "description": "Description line 2 of \"Manual update\" overlay",
-        "end": {
-          "column": 3,
-          "line": 27
-        },
-        "file": "source/renderer/app/components/appUpdate/AppManualUpdateOverlay.js",
-        "id": "appUpdate.manualUpdateOverlay.description2",
-        "start": {
-          "column": 20,
-          "line": 22
-        }
-      },
-      {
-        "defaultMessage": "!!!Follow instructions and manually update",
-        "description": "Label for \"Follow instructions and manually update\" action button on \"Manual update\" overlay",
-        "end": {
-          "column": 3,
-          "line": 33
-        },
-        "file": "source/renderer/app/components/appUpdate/AppManualUpdateOverlay.js",
-        "id": "appUpdate.manualUpdateOverlay.button.label",
-        "start": {
-          "column": 21,
-          "line": 28
-        }
-      },
-      {
-        "defaultMessage": "!!!https://iohk.zendesk.com/hc/en-us/articles/360023850634",
-        "description": "Follow instructions and manually update link on \"Manual update\" overlay",
-        "end": {
-          "column": 3,
-          "line": 40
-        },
-        "file": "source/renderer/app/components/appUpdate/AppManualUpdateOverlay.js",
-        "id": "appUpdate.manualUpdateOverlay.button.url",
-        "start": {
-          "column": 25,
-          "line": 34
-        }
-      }
-    ],
-    "path": "source/renderer/app/components/appUpdate/AppManualUpdateOverlay.json"
-  },
-  {
-    "descriptors": [
-      {
         "defaultMessage": "!!!Software update available!",
-        "description": "title for the Update Overlay",
+        "description": "\"title\" for the App Update Overlay",
         "end": {
           "column": 3,
-          "line": 21
+          "line": 25
         },
         "file": "source/renderer/app/components/appUpdate/AppUpdateOverlay.js",
         "id": "appUpdate.overlay.title",
         "start": {
           "column": 9,
-          "line": 17
+          "line": 21
         }
       },
       {
         "defaultMessage": "!!!You are currently running Daedalus version {currentAppVersion}.<br />Daedalus version {availableAppVersion} is now available to download.",
-        "description": "subtitle for the Update Overlay",
+        "description": "\"subtitle\" for the App Update Overlay",
         "end": {
           "column": 3,
-          "line": 27
+          "line": 31
         },
         "file": "source/renderer/app/components/appUpdate/AppUpdateOverlay.js",
         "id": "appUpdate.overlay.subtitle",
         "start": {
           "column": 12,
-          "line": 22
+          "line": 26
         }
       },
       {
         "defaultMessage": "!!!I understand that I need to complete the installation before starting Daedalus.",
-        "description": "checkboxLabel for the Update Overlay",
+        "description": "\"checkboxLabel\" for the App Update Overlay",
         "end": {
           "column": 3,
-          "line": 33
+          "line": 37
         },
         "file": "source/renderer/app/components/appUpdate/AppUpdateOverlay.js",
         "id": "appUpdate.overlay.checkboxLabel",
         "start": {
           "column": 17,
-          "line": 28
+          "line": 32
         }
       },
       {
         "defaultMessage": "!!!Quit Daedalus and start the installation",
-        "description": "buttonLabel for the Update Overlay",
+        "description": "\"buttonLabel\" for the App Update Overlay",
         "end": {
           "column": 3,
-          "line": 38
+          "line": 42
         },
         "file": "source/renderer/app/components/appUpdate/AppUpdateOverlay.js",
         "id": "appUpdate.overlay.buttonLabel",
         "start": {
           "column": 15,
-          "line": 34
+          "line": 38
         }
       },
       {
         "defaultMessage": "!!!Download in progress",
-        "description": "downloadProgressLabel for the Update Overlay",
+        "description": "\"downloadProgressLabel\" for the App Update Overlay",
         "end": {
           "column": 3,
-          "line": 43
+          "line": 47
         },
         "file": "source/renderer/app/components/appUpdate/AppUpdateOverlay.js",
         "id": "appUpdate.overlay.downloadProgressLabel",
         "start": {
           "column": 25,
-          "line": 39
+          "line": 43
         }
       },
       {
         "defaultMessage": "!!!{downloadTimeLeft} left",
-        "description": "downloadTimeLeft for the Update Overlay",
+        "description": "\"downloadTimeLeft\" for the App Update Overlay",
         "end": {
           "column": 3,
-          "line": 48
+          "line": 52
         },
         "file": "source/renderer/app/components/appUpdate/AppUpdateOverlay.js",
         "id": "appUpdate.overlay.downloadTimeLeft",
         "start": {
           "column": 20,
-          "line": 44
+          "line": 48
         }
       },
       {
         "defaultMessage": "!!!({totalDownloaded} of {totalDownloadSize} downloaded)",
-        "description": "downloadProgressData for the Update Overlay",
+        "description": "\"downloadProgressData\" for the App Update Overlay",
         "end": {
           "column": 3,
-          "line": 53
+          "line": 57
         },
         "file": "source/renderer/app/components/appUpdate/AppUpdateOverlay.js",
         "id": "appUpdate.overlay.downloadProgressData",
         "start": {
           "column": 24,
-          "line": 49
+          "line": 53
+        }
+      },
+      {
+        "defaultMessage": "!!!We were unable to launch the update installer automatically. Please manually update Daedalus to its latest version.",
+        "description": "\"manualUpdateDescription\" for the App Update Overlay",
+        "end": {
+          "column": 3,
+          "line": 63
+        },
+        "file": "source/renderer/app/components/appUpdate/AppUpdateOverlay.js",
+        "id": "appUpdate.overlay.manualUpdate.description",
+        "start": {
+          "column": 27,
+          "line": 58
+        }
+      },
+      {
+        "defaultMessage": "!!!Download and install it manually",
+        "description": "\"manualUpdateLinkLabel\" for the App Update Overlay",
+        "end": {
+          "column": 3,
+          "line": 68
+        },
+        "file": "source/renderer/app/components/appUpdate/AppUpdateOverlay.js",
+        "id": "appUpdate.overlay.manualUpdate.link.label",
+        "start": {
+          "column": 25,
+          "line": 64
+        }
+      },
+      {
+        "defaultMessage": "!!!Follow instructions and manually update",
+        "description": "\"manualUpdateButtonLabel\" for the App Update Overlay",
+        "end": {
+          "column": 3,
+          "line": 73
+        },
+        "file": "source/renderer/app/components/appUpdate/AppUpdateOverlay.js",
+        "id": "appUpdate.overlay.manualUpdate.button.label",
+        "start": {
+          "column": 27,
+          "line": 69
+        }
+      },
+      {
+        "defaultMessage": "!!!https://iohk.zendesk.com/hc/en-us/articles/360023850634",
+        "description": "\"manualUpdateButtonUrl\" for the App Update Overlay",
+        "end": {
+          "column": 3,
+          "line": 79
+        },
+        "file": "source/renderer/app/components/appUpdate/AppUpdateOverlay.js",
+        "id": "appUpdate.overlay.manualUpdate.button.url",
+        "start": {
+          "column": 25,
+          "line": 74
         }
       }
     ],
@@ -8859,13 +8840,13 @@
         "description": "Label for the \"Transaction assurance security level\" dropdown.",
         "end": {
           "column": 3,
-          "line": 25
+          "line": 27
         },
         "file": "source/renderer/app/components/wallet/settings/WalletSettings.js",
         "id": "wallet.settings.assurance",
         "start": {
           "column": 23,
-          "line": 20
+          "line": 22
         }
       },
       {
@@ -8873,13 +8854,13 @@
         "description": "Delete wallet header on the wallet settings page.",
         "end": {
           "column": 3,
-          "line": 30
+          "line": 32
         },
         "file": "source/renderer/app/components/wallet/settings/WalletSettings.js",
         "id": "wallet.settings.deleteWallet.header",
         "start": {
           "column": 22,
-          "line": 26
+          "line": 28
         }
       },
       {
@@ -8887,13 +8868,13 @@
         "description": "Delete wallet warning explaining the consequences.",
         "end": {
           "column": 3,
-          "line": 36
+          "line": 38
         },
         "file": "source/renderer/app/components/wallet/settings/WalletSettings.js",
         "id": "wallet.settings.deleteWallet.warning1",
         "start": {
           "column": 24,
-          "line": 31
+          "line": 33
         }
       },
       {
@@ -8901,13 +8882,13 @@
         "description": "Delete wallet warning explaining the consequences.",
         "end": {
           "column": 3,
-          "line": 42
+          "line": 44
         },
         "file": "source/renderer/app/components/wallet/settings/WalletSettings.js",
         "id": "wallet.settings.deleteWallet.warning2",
         "start": {
           "column": 24,
-          "line": 37
+          "line": 39
         }
       },
       {
@@ -8915,13 +8896,13 @@
         "description": "Label for the \"Name\" text input on the wallet settings page.",
         "end": {
           "column": 3,
-          "line": 47
+          "line": 49
         },
         "file": "source/renderer/app/components/wallet/settings/WalletSettings.js",
         "id": "wallet.settings.name.label",
         "start": {
           "column": 8,
-          "line": 43
+          "line": 45
         }
       },
       {
@@ -8929,13 +8910,13 @@
         "description": "Label for the \"Password\" field.",
         "end": {
           "column": 3,
-          "line": 52
+          "line": 54
         },
         "file": "source/renderer/app/components/wallet/settings/WalletSettings.js",
         "id": "wallet.settings.password",
         "start": {
           "column": 17,
-          "line": 48
+          "line": 50
         }
       },
       {
@@ -8943,13 +8924,13 @@
         "description": "Last updated X time ago message.",
         "end": {
           "column": 3,
-          "line": 57
+          "line": 59
         },
         "file": "source/renderer/app/components/wallet/settings/WalletSettings.js",
         "id": "wallet.settings.passwordLastUpdated",
         "start": {
           "column": 23,
-          "line": 53
+          "line": 55
         }
       },
       {
@@ -8957,13 +8938,13 @@
         "description": "You still don't have password set message.",
         "end": {
           "column": 3,
-          "line": 62
+          "line": 64
         },
         "file": "source/renderer/app/components/wallet/settings/WalletSettings.js",
         "id": "wallet.settings.passwordNotSet",
         "start": {
           "column": 18,
-          "line": 58
+          "line": 60
         }
       }
     ],
@@ -13917,7 +13898,7 @@
           "line": 78
         },
         "file": "storybook/stories/common/Widgets.stories.js",
-        "id": "manualUpdate.button.label",
+        "id": "appUpdate.manualUpdateOverlay.button.label",
         "start": {
           "column": 22,
           "line": 74
