--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -15,20 +15,20 @@
   "api.errors.WalletFileImportError": "ウォレットをインポートできませんでした。有効なファイルを指定していることを確認してください。",
   "api.errors.inputsDepleted": "報酬残高のみを含むウォレットからの送信はできません。",
   "api.errors.invalidAddress": "有効なアドレスを入力してください。",
+  "api.errors.nothingToMigrate": "このウォレットに保有されている未使用トランザクションアウトプット（UTXO）の一部に、移行するために十分なADAが入っていないため、このウォレットから資金を移すことはできません。",
+  "api.errors.utxoTooSmall": "無効なトランザクションです。",
   "appUpdate.manualUpdateOverlay.button.label": "指示に従って手動で更新してください",
-  "appUpdate.manualUpdateOverlay.button.url": "https://iohk.zendesk.com/hc/ja/articles/360023850634",
-  "appUpdate.manualUpdateOverlay.description1": "ネットワークへの接続に不具合があり、Daedalusウォレットの最新バージョンが実行されていません。DaedalusがCardanoネットワークに接続されていない間、自動更新は実行できません。",
-  "appUpdate.manualUpdateOverlay.description2": "ご使用のDaedalusはバージョン<b>{currentAppVersion}</b>です。現在<b>{availableAppVersion}</b>をご利用いただけます。手動で最新版に更新すると、接続の不具合を解消できる場合があります。",
-  "appUpdate.manualUpdateOverlay.title": "ソフトウェアが更新できます",
   "appUpdate.overlay.buttonLabel": "Daedalusを終了してインストールを開始する",
   "appUpdate.overlay.checkboxLabel": "Daedalusを起動する前に、インストールを完了する必要があることを理解しました。",
   "appUpdate.overlay.downloadProgressData": "（{totalDownloaded}/{totalDownloadSize}をダウンロード済み）",
   "appUpdate.overlay.downloadProgressLabel": "ダウンロードしています",
   "appUpdate.overlay.downloadTimeLeft": "残り{downloadTimeLeft}",
+  "appUpdate.overlay.manualUpdate.button.label": "指示に従い手動で更新してください",
+  "appUpdate.overlay.manualUpdate.button.url": "https://iohk.zendesk.com/hc/ja/articles/360023850634",
+  "appUpdate.overlay.manualUpdate.description": "自動で更新インストーラーを起動できませんでした。手動でDaedalusを最新バージョンに更新してください。",
+  "appUpdate.overlay.manualUpdate.link.label": "!!!Download and install it manually",
   "appUpdate.overlay.subtitle": "このDaedalusはバージョン<b>{currentAppVersion}</b>です。<br />現在Daedalus <b>{availableAppVersion}</b>がダウンロード可能です",
   "appUpdate.overlay.title": "ソフトウェアが更新できます!",
-  "api.errors.nothingToMigrate": "このウォレットに保有されている未使用トランザクションアウトプット（UTXO）の一部に、移行するために十分なADAが入っていないため、このウォレットから資金を移すことはできません。",
-  "api.errors.utxoTooSmall": "無効なトランザクションです。",
   "backToTopButton.label": "トップに戻る",
   "cancel.transaction.confirmation.dialog.button.backLabel": "いいえ、トランザクションを保留にしておきます",
   "cancel.transaction.confirmation.dialog.button.confirmLabel": "はい、トランザクションをキャンセルします",
