[DDW-269] Translation manager

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -17,7 +17,6 @@
   "api.errors.invalidAddress": "Please enter a valid address.",
   "api.errors.nothingToMigrate": "Funds cannot be transferred from this wallet because it contains some unspent transaction outputs (UTXOs), with amounts of ada that are too small to be migrated.",
   "api.errors.utxoTooSmall": "Invalid transaction.",
-  "appUpdate.manualUpdateOverlay.button.label": "Follow instructions and manually update",
   "appUpdate.overlay.buttonLabel": "Quit Daedalus and start the installation",
   "appUpdate.overlay.checkboxLabel": "I understand that I need to complete the installation before starting Daedalus.",
   "appUpdate.overlay.downloadProgressData": "({totalDownloaded} of {totalDownloadSize} downloaded)",
@@ -182,6 +181,7 @@
   "loading.screen.updatedCardanoMessage": "Cardano node updated",
   "loading.screen.updatingCardanoMessage": "Updating Cardano node",
   "loading.screen.verifyingBlockchainMessage": "Verifying the blockchain ({verificationProgress}% complete) ",
+  "manualUpdate.button.label": "!!!Follow instructions and manually update",
   "news.newsfeed.empty": "Newsfeed is empty",
   "news.newsfeed.noFetch": "Trying to fetch the newsfeed...",
   "news.newsfeed.title": "Newsfeed",
