--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -17,7 +17,6 @@
   "api.errors.invalidAddress": "有効なアドレスを入力してください。",
   "api.errors.nothingToMigrate": "このウォレットに保有されている未使用トランザクションアウトプット（UTXO）の一部に、移行するために十分なADAが入っていないため、このウォレットから資金を移すことはできません。",
   "api.errors.utxoTooSmall": "無効なトランザクションです。",
-  "appUpdate.manualUpdateOverlay.button.label": "指示に従って手動で更新してください",
   "appUpdate.overlay.buttonLabel": "Daedalusを終了してインストールを開始する",
   "appUpdate.overlay.checkboxLabel": "Daedalusを起動する前に、インストールを完了する必要があることを理解しました。",
   "appUpdate.overlay.downloadProgressData": "（{totalDownloaded}/{totalDownloadSize}をダウンロード済み）",
@@ -182,6 +181,7 @@
   "loading.screen.updatedCardanoMessage": "Cardanoノードが更新されました",
   "loading.screen.updatingCardanoMessage": "Cardanoノードを更新しています",
   "loading.screen.verifyingBlockchainMessage": "ブロックチェーンを検証しています（{verificationProgress}%完了）",
+  "manualUpdate.button.label": "!!!Follow instructions and manually update",
   "news.newsfeed.empty": "ニュースフィードは空です",
   "news.newsfeed.noFetch": "ニュースフィードを読み込んでいます…",
   "news.newsfeed.title": "ニュースフィード",
