--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -901,6 +901,7 @@
   "wallet.transferFunds.dialog2.label.buttonLabel": "Transfer funds",
   "wallet.transferFunds.dialog2.label.description": "Confirm transfer from {sourceWalletName} wallet to {targetWalletName} wallet.",
   "wallet.transferFunds.dialog2.label.fees": "Fees",
+  "wallet.transferFunds.dialog2.label.leftovers": "Leftovers",
   "wallet.transferFunds.dialog2.label.total": "Total",
   "wallet.transferFunds.dialog2.passphraseFieldPlaceholder": "Spending password",
   "wallet.transferFunds.dialog2.passphraseLabel": "Spending password",
