--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -534,6 +534,7 @@
   "systemTime.error.supportPortalLink": "Support Portal",
   "systemTime.error.supportPortalLinkUrl": "https://daedaluswallet.io/clock-sync/",
   "test.environment.daedalusFlightLabel": "Cardano mainnet - Daedalus Flight",
+  "test.environment.daedalusMainnetEAGLabel": "Cardano mainnet - Daedalus EAG",
   "test.environment.developmentLabel": "Development",
   "test.environment.itnRewardsV1Label": "Incentivized Testnet v1 - Rewards",
   "test.environment.itnSelfnodeLabel": "ITN Selfnode",
