--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -23,7 +23,7 @@
   "appUpdate.overlay.downloadProgressLabel": "ダウンロードしています",
   "appUpdate.overlay.downloadTimeLeft": "残り{downloadTimeLeft}",
   "appUpdate.overlay.manualUpdate.button.label": "指示に従い手動で更新してください",
-  "appUpdate.overlay.manualUpdate.button.url": "https://iohk.zendesk.com/hc/ja/articles/360023850634",
+  "appUpdate.overlay.manualUpdate.button.url": "https://daedaluswallet.io/ja/download/",
   "appUpdate.overlay.manualUpdate.description": "自動で更新インストーラーを起動できませんでした。手動でDaedalusを最新バージョンに更新してください。",
   "appUpdate.overlay.manualUpdate.link.label": "手動ででダウンロードおよびインストールしてください",
   "appUpdate.overlay.subtitle": "このDaedalusはバージョン<b>{currentAppVersion}</b>です。<br />現在Daedalus <b>{availableAppVersion}</b>がダウンロード可能です",
