--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -17,7 +17,8 @@
   "api.errors.invalidAddress": "有効なアドレスを入力してください。",
   "api.errors.nothingToMigrate": "このウォレットに保有されている未使用トランザクションアウトプット（UTXO）の一部に、移行するために十分なADAが入っていないため、このウォレットから資金を移すことはできません。",
   "api.errors.utxoTooSmall": "無効なトランザクションです。",
-  "appUpdate.overlay.buttonLabel": "Daedalusを終了してインストールを開始する",
+  "appUpdate.overlay.buttonLabelOpenDirectory": "!!!Quit Daedalus and open installer",
+  "appUpdate.overlay.buttonLabelOpenInstaller": "Daedalusを終了してインストールを開始する",
   "appUpdate.overlay.checkboxLabel": "Daedalusを起動する前に、インストールを完了する必要があることを理解しました。",
   "appUpdate.overlay.downloadProgressData": "（{totalDownloaded}/{totalDownloadSize}をダウンロード済み）",
   "appUpdate.overlay.downloadProgressLabel": "ダウンロードしています",
