--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -17,7 +17,8 @@
   "api.errors.invalidAddress": "Please enter a valid address.",
   "api.errors.nothingToMigrate": "Funds cannot be transferred from this wallet because it contains some unspent transaction outputs (UTXOs), with amounts of ada that are too small to be migrated.",
   "api.errors.utxoTooSmall": "Invalid transaction.",
-  "appUpdate.overlay.buttonLabel": "Quit Daedalus and start the installation",
+  "appUpdate.overlay.buttonLabelOpenDirectory": "Quit Daedalus and open the installer directory",
+  "appUpdate.overlay.buttonLabelOpenInstaller": "Quit Daedalus and start the installation",
   "appUpdate.overlay.checkboxLabel": "I understand that I need to complete the installation before starting Daedalus.",
   "appUpdate.overlay.downloadProgressData": "({totalDownloaded} of {totalDownloadSize} downloaded)",
   "appUpdate.overlay.downloadProgressLabel": "Download in progress",
