--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -17,7 +17,7 @@
   "api.errors.invalidAddress": "Please enter a valid address.",
   "api.errors.nothingToMigrate": "Funds cannot be transferred from this wallet because it contains some unspent transaction outputs (UTXOs), with amounts of ada that are too small to be migrated.",
   "api.errors.utxoTooSmall": "Invalid transaction.",
-  "appUpdate.overlay.button.installUpdate.label": "Quit Daedalus and open the installer directory",
+  "appUpdate.overlay.button.installUpdate.label": "Install the update and restart Daedalus",
   "appUpdate.overlay.button.launchInstaller.label": "Quit Daedalus and start the installation",
   "appUpdate.overlay.checkboxLabel": "I understand that I need to complete the installation before starting Daedalus.",
   "appUpdate.overlay.downloadProgressData": "({totalDownloaded} of {totalDownloadSize} downloaded)",
@@ -26,7 +26,7 @@
   "appUpdate.overlay.manualUpdate.button.label": "Follow instructions and manually update",
   "appUpdate.overlay.manualUpdate.button.url": "https://daedaluswallet.io/en/download/",
   "appUpdate.overlay.manualUpdate.description": "We were unable to launch the update installer automatically. Please manually update Daedalus to its latest version.",
-  "appUpdate.overlay.postponeInstall.link.label": "Postpone installation",
+  "appUpdate.overlay.postponeInstall.link.label": "Postpone the update",
   "appUpdate.overlay.subtitle": "You are currently running Daedalus version <b>{currentAppVersion}</b>.<br />Daedalus version <b>{availableAppVersion}</b> is now available to download.",
   "appUpdate.overlay.title": "Software update available!",
   "backToTopButton.label": "Back to top",
