--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -17,7 +17,7 @@
   "api.errors.invalidAddress": "有効なアドレスを入力してください。",
   "api.errors.nothingToMigrate": "このウォレットに保有されている未使用トランザクションアウトプット（UTXO）の一部に、移行するために十分なADAが入っていないため、このウォレットから資金を移すことはできません。",
   "api.errors.utxoTooSmall": "無効なトランザクションです。",
-  "appUpdate.overlay.button.installUpdate.label": "!!!Quit Daedalus and open installer",
+  "appUpdate.overlay.button.installUpdate.label": "更新をインストールしてDaedalusを再起動する",
   "appUpdate.overlay.button.launchInstaller.label": "Daedalusを終了してインストールを開始する",
   "appUpdate.overlay.checkboxLabel": "Daedalusを起動する前に、インストールを完了する必要があることを理解しました。",
   "appUpdate.overlay.downloadProgressData": "（{totalDownloaded}/{totalDownloadSize}をダウンロード済み）",
@@ -26,7 +26,7 @@
   "appUpdate.overlay.manualUpdate.button.label": "指示に従い手動で更新してください",
   "appUpdate.overlay.manualUpdate.button.url": "https://daedaluswallet.io/ja/download/",
   "appUpdate.overlay.manualUpdate.description": "自動で更新インストーラーを起動できませんでした。手動でDaedalusを最新バージョンに更新してください。",
-  "appUpdate.overlay.postponeInstall.link.label": "!!!Postpone installation",
+  "appUpdate.overlay.postponeInstall.link.label": "後で更新する",
   "appUpdate.overlay.subtitle": "このDaedalusはバージョン<b>{currentAppVersion}</b>です。<br />現在Daedalus <b>{availableAppVersion}</b>がダウンロード可能です",
   "appUpdate.overlay.title": "ソフトウェアが更新できます!",
   "backToTopButton.label": "トップに戻る",
